--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fast-csv": "^5.0.2",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "path": "^0.12.7",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
